@@ -1,3 +1,14 @@
+2015-05-16  Tanay C  <tanay.c@samsung.com>
+
+        [EFL][WK2] Minibrowser : Add search icon to search bar
+        https://bugs.webkit.org/show_bug.cgi?id=139773
+
+        Reviewed by Gyuyoung Kim.
+
+        * MiniBrowser/efl/main.c: 
+        (search_icon_show): Added.
+        (search_box_show): Modified.
+
 2015-05-15  Ryosuke Niwa  <rniwa@webkit.org>
 
         run_benchmark should have an option to specify the number of runs
